# zircuit_points_scraper

./: .gitignore  Cargo.toml  LICENSE  README.md  query.sql  query.txt  users.csv  wallets.csv
src/: dune.rs  fetch.rs  file.rs  main.rs
