[package]
name = "zircuit_points_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = {version="0.12", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
csv = "1.3.0"
log = "0.4.14"
env_logger = "0.11"
dotenv = "0.15.0"
